--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
         <h1>Portfolio</h1>
     </header>
     
-    <section>
-        <img src="https://res.cloudinary.com/dt7o2ypts/image/upload/v1738335328/dipvfz0jyvj1zeprtoho.jpg" alt="Description of the image">
-        
+    <section class="image-section">
+        <img src="https://res.cloudinary.com/dt7o2ypts/image/upload/v1738335328/dipvfz0jyvj1zeprtoho.jpg" alt="Portfolio Image">
     </section>
 
-    <section>
+    <section class="about-me">
         <h2>About Me</h2>
-        <p>Hello I am Jerahmeel F. Atchoco, im from Pangasinan and I’m someone who loves being outdoors whether it's hiking, working out, or just exploring new places. I enjoy staying active and feeling connected to nature. There's just something about being outside that makes me feel alive, whether it's the challenge of a tough trail or the satisfaction of a good workout. I like to stay moving and discover new spots along the way.</p>
+        <p class="about-description">Hello, I am Jerahmeel F. Atchoco. I'm from Pangasinan, and I’m someone who loves being outdoors whether it's hiking, working out, or just exploring new places. I enjoy staying active and feeling connected to nature. There's just something about being outside that makes me feel alive, whether it's the challenge of a tough trail or the satisfaction of a good workout. I like to stay moving and discover new spots along the way.</p>
+        <button class="toggle-btn" onclick="toggleContent('about-description', this)">Show More</button>
     </section>
 
-    <section>
-        <h2>Contact</h2>
-        <p>Email: jfa7472@students.uc-bcf.edu.ph</p>
-    </section>
-
+    <section class="contact">
+    <h2>Contact</h2>
+    <p class="contact-description">Facebook: <a href="https://www.facebook.com/share/1B31sZwULL/" target="_blank">Jerahmeel Atchoco</a></p>
+    <p class="contact-description">Github: <a href="https://github.com/DIEske24" target="_blank">DIEske24</a></p>
+     <p class="contact-description">Email: jfa7472@students.uc-bcf.edu.ph</p>
+    <button class="toggle-btn" onclick="toggleContent('contact-description', this)">Show More</button>
+</section>
+    <script src="script.js"></script>
 </body>
 </html>
