--- a/index.html
+++ b/index.html
@@ -7,27 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
-        <h1>Portfolio</h1>
+        <h1>Jerahmeel's Portfolio</h1>
+        <button class="toggle-btn" onclick="toggleContent('about')">About Me</button>
+        <button class="toggle-btn" onclick="toggleContent('contact')">Contact</button>
+
+        <div id="about" class="hidden-content">
+            <p>
+                Hello, I am <strong>Jerahmeel F. Atchoco</strong>. I'm from Pangasinan, and I love being outdoors—whether it's hiking, working out, or exploring new places.
+                There's something about being outside that makes me feel alive, whether it's the challenge of a tough trail or the satisfaction of a good workout.
+            </p>
+        </div>
+
+        <div id="contact" class="hidden-content">
+            <p>Facebook: <a href="https://www.facebook.com/share/1B31sZwULL/" target="_blank">Jerahmeel Atchoco</a></p>
+            <p>Github: <a href="https://github.com/DIEske24" target="_blank">DIEske24</a></p>
+            <p>Email: jfa7472@students.uc-bcf.edu.ph</p>
+        </div>
     </header>
-    
-    <section class="image-section">
+
+    <section>
         <img src="https://res.cloudinary.com/dt7o2ypts/image/upload/v1738335328/dipvfz0jyvj1zeprtoho.jpg" alt="Portfolio Image">
     </section>
 
-    <section class="about-me">
-        <h2>About Me</h2>
-        <p class="about-description">Hello, I am Jerahmeel F. Atchoco. I'm from Pangasinan, and I’m someone who loves being outdoors whether it's hiking, working out, or just exploring new places. I enjoy staying active and feeling connected to nature. There's just something about being outside that makes me feel alive, whether it's the challenge of a tough trail or the satisfaction of a good workout. I like to stay moving and discover new spots along the way.</p>
-        <button class="toggle-btn" onclick="toggleContent('about-description', this)">Show More</button>
-    </section>
-
-    <section class="contact">
-    <h2>Contact</h2>
-    <p class="contact-description">Facebook: <a href="https://www.facebook.com/share/1B31sZwULL/" target="_blank">Jerahmeel Atchoco</a></p>
-    <p class="contact-description">Github: <a href="https://github.com/DIEske24" target="_blank">DIEske24</a></p>
-     <p class="contact-description">Email: jfa7472@students.uc-bcf.edu.ph</p>
-    <button class="toggle-btn" onclick="toggleContent('contact-description', this)">Show More</button>
-</section>
     <script src="script.js"></script>
 </body>
 </html>
