--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 <body>
 
     <header>
-        <h1>Jerahmeel's Portfolio</h1>
+        <h1>Portfolio</h1>
         <button class="toggle-btn" onclick="toggleContent('about')">About Me</button>
         <button class="toggle-btn" onclick="toggleContent('contact')">Contact</button>
 
         <div id="about" class="hidden-content">
-            <p>
-                Hello, I am <strong>Jerahmeel F. Atchoco</strong>. I'm from Pangasinan, and I love being outdoors—whether it's hiking, working out, or exploring new places.
-                There's something about being outside that makes me feel alive, whether it's the challenge of a tough trail or the satisfaction of a good workout.
-            </p>
+           <p>Hello, I am Jerahmeel F. Atchoco, from Pangasinan. I have a passion for the outdoors whether it's hiking, working out, or discovering new places. There’s something about being in nature that energizes me, whether it’s conquering a challenging trail or enjoying the rewards of a great workout.</p>
+    <p>If you need a tour guide or a hiking buddy, feel free to reach out to me!</p>
         </div>
 
         <div id="contact" class="hidden-content">
@@ -27,9 +25,9 @@
         </div>
     </header>
 
-    <section>
-        <img src="https://res.cloudinary.com/dt7o2ypts/image/upload/v1738335328/dipvfz0jyvj1zeprtoho.jpg" alt="Portfolio Image">
-    </section>
+    <section class="image-frame">
+    <img src="https://res.cloudinary.com/dt7o2ypts/image/upload/v1738335328/dipvfz0jyvj1zeprtoho.jpg" alt="Portfolio Image">
+</section>
 
     <script src="script.js"></script>
 </body>
